# viper

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  build_run_docker.sh  docker_build_entry.sh  find_cc.sh
Demo/: Demo.cu  Octopus.h  OctopusComponent.cu  OctopusComponent.h
SphereWeights/: SphereWeights.cpp  SphereWeights.h  SphereWeightsMain.cpp
Viper/: CollisionGrid.cu  CollisionGrid.cuh  Common.h  ConstraintsInfo.h  CudaConstraints.cuh  CudaConstraints.h  CudaData.cuh  CudaSolver.cu  CudaSolver.h  CudaUtils.cu  CudaUtils.cuh  Mesh.cpp  Mesh.h  Particle.h  Rod.h  Scene.cu  Scene.h  State.h  Subprocess.h  Utils.cpp  Utils.h  Viper_json.h  nnsearch.h
cmake/: FindGLEW.cmake  FindGLFW.cmake  FindGMP.cmake  configure.cmake
docs/: index.md
